--- a/TecHouseView/frmMenuComun.resx
+++ b/TecHouseView/frmMenuComun.resx
@@ -118,6 +118,77 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox5.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAkGBxATEhATEBIPFRAVERcRERAXEg8QFhUQFRIWFhcVFRUY
+        HSggGBslHhUVIjEhJSkrLi4uFx81ODMtNygtLiv/2wBDAQoKCg4NDhoQEBouJR8lKystLS0tLS0tLyst
+        LS0tLS0tLS0tLS0tLS0vLi0tLS0tLS0tLS0tMC0tLS0tLS02Nyv/wAARCADhAOEDASIAAhEBAxEB/8QA
+        HAABAAEFAQEAAAAAAAAAAAAAAAQBAgMGBwUI/8QAQBAAAgECAgYHAwoGAQUAAAAAAAECAxEEBQYhMUFR
+        cQcSE2GBkaEiMlIUFSNCYoKSscHRM3KiwuHwcyQ0Q1Nj/8QAGgEBAAMBAQEAAAAAAAAAAAAAAAIDBAEF
+        Bv/EACoRAQACAgEDAwIGAwAAAAAAAAABAgMREgQhMRNBUTJhFCKBkaGxBVLx/9oADAMBAAIRAxEAPwDu
+        IAAAAAAAAKN21vZxNQz/AKQMNRbhRtWqrVqdoJ98t/gRtaKxuVmPFbJOqxtuB4eaaWYKhdTqxlJfUh9J
+        L01LxOTZ5pficRftKrUP/VD2Y+NtvizxqMak37EdXFma3U/6w9DH/jve8/s6Tj+k3aqFD71SX9sf3PAx
+        eneYT2VIwXCEIr1d2eRh8tsvblflq9SVDsofAudmUTlvPu2V6bDXxVjnm+Oqba2Jl9+a/ItVDFy2yq+N
+        SX7kv52pr60PUp880/ij6kd/Mp614iGXD4Ctb3q1+Kqy/wAEylTxcfdq4lcq0v3IlPN6W6SvzsTaGap/
+        Wi+dv0JRr5V25fEJVLO8xp/+Wo/54Rqetr+p6WF06rx1VqNOffBum/KV16o86GOT3eTuZOtTnt6r5oti
+        1vayi1KT9VP2bZl+mGEqWTk6UvhqLqa/5vd9T3oSTSaaaexrWmcvrZZB7Lr1RiwssVhnehOSW+KfWg+c
+        HqLIzWj6oZ7dJS30T+kurA1DKNN4O0cVHs5bO0jdw8Vtj6o2ylUjJKUWnFq6kmmmu5l9bxbwx5MV8c6t
+        C8AElYAAAAAAAAAAAAAHmZ7nuHwlPr15pfDBa5SfCKPN0x0upYKFtU8RJfR0r/1T4R/M4pm2aVsTUlVr
+        zcpvyS4RW5FGXNFe0eW3puknJ+a3aP7e7pVpxicW3GLdLD7qcXrkvty38thq8INvUWlUzHNpmdy9mlK0
+        jVYTKHZQ1zvKXwrZ4sy1M4nsgoxXcjzQcSZqmKqS2yk/ExNlAAAAAqpNbGygAlUcfVjsk/zPTwukMl76
+        uuJ4QDkxEt7wGcwl7svus9ejik9up+hy+Mmtmo9XL88nCyl7USUXmFN8MT4dI+bsPXVv4VXc2/Yk+e2L
+        8yDTljMBP2b9S93TeuElxXB96PPy7NYyS6ruvh3rkbNgs1Th2dVdpS2WfvR5MtjjbvHaWW0Wp2mNx8Pf
+        yLSCjiV7Ps1UvapN613r4l3o9c5xmuSSp2r4WTcE7xnHVKD4PgzYdF9J1WtSr2jX3PYqnLhLu8i+mTvx
+        t5Y8vTxrnj7x/MNmABcyAAAAAAAABrWm+lcMDS1WliJr6Kn/AHy+yvU9HSPO6eEoTrVN2qEN85vZFf7s
+        ufP+b5nVxNadas7zk/BLdFcEinLk4xqPLZ0nT+pPK3iP5W4zF1Ks5VKsnKpJ3lJ8f2MAQML247AADoAA
+        AAAAAAAAAAAAADLQryg7xdjacnztSspO0vzNRKxk1rW0I2rFo7ut5Xmji7xtrVpQeuMojOsojKPyjDXS
+        TvOG+Ev27zSckzi9ozevczc8rzGUWmrXtaUd0o701vRdW0WjUsWTHbHblX/r3tE9Iu2XZVn9NFan8aX9
+        xsxzfO8EouOIw11G97LbTmtdv24o3HRrOViaV3ZVY6qke/4l3M0Y7zvjbz/bD1GKNepTx7x8S9cAFzIA
+        AAUbtt2FTR+lfSL5Nheypu1aveCttjS+vL9PE5adRtPHSb2isOf9IGkrxmIag/8Ap6TcKS3SeyU/F7O5
+        GrlIKyRcjz7TudvoMdIrWKwuABBaAAAAAAAAAAAAAAAAAAAAAKxdta2m1ZDmvWSTftL/AG5qhkoVnCSk
+        tqDloiY06xl+KX1leEl1ake7iu9bUQcPiJYTERqQu6betcYPaue88/J8epRjJcpI9XFUVOLXin3l2+Ub
+        jzDDNYraYnxPl0bD1ozjGcXeMkpJ9zMhpugWZu0sPN643lT5fWj+vmbka6X5V28vNjnHeagAJqhnzrp1
+        nfyvG1aid6UZdlS4dnF2uubu/E7Tp9m3ybA4ionabj2VP+efsry1vwPnamta5lGafZv6Onm36JRWJQui
+        Y3rwqADiQAAAAAAAAAAAAAAAAAAAAAAAD19HsZ1J9V7H+ZvOCq3VuGzkcxhKzTW43rKMX1oxl5kqTqVG
+        am42mVasqFenVhualz4rxX5nUaFZTjGUdcZRUk+5q5zTM6fWhfhrXI2rQPG9fDuD96nLq/detfr5GjFO
+        rzX5ef1VeWOL/HZsoANTznKenDMP+0w6fxVpLl7Eb+cjllHajbelfGdpmNZX1U4QpLwj1n6yNSo7UZMk
+        7mXsdPXVawkl0S0uiZ5boVABxIAAAAAAAAAAAAAAAAAAAAAAAANi0axG2P8Av+7DXT0Mlq2qJcdQcmNw
+        6BQfWg1wTX7GfQPE9TFShfVUg42+1DWn5XPPwle2vc1rIWAxqp4vDNPZXtL+Vu2vzLYtqayxzTlS9fs7
+        GADe8R8zaWYrtMfjJccRUX4ZuK9EQKO0sx1TrV60virVJec5MupPWjFZ7eP2SS6JaXRKZa4VABxIAAAA
+        AAAAAAAAAAAAAAAAAAAAM2FnacXwaMJdDauaA3zDPV4muYmrarKS3Tv5P/B7mDnq+7f0ua5Ud23xu/M5
+        M9kKx3l3H54XEHPfnJ8QbPWeX+FhyzFK1aouFSa8pMui9aZn0jo9TGYyL+riqy8O1lb0IyZCWikppWJZ
+        B6kXIplsiV4AIpgAAAAAAAAAAAAAAAAAAAAAAABVFC6O1cwNqlO1O/2P0PEg9V+ZPzar1aMVvkkvBLWe
+        bSj7CXFW8yLkNu+RSBvvzJ3A2ek8v8VDjHSng+zzPFcJuFZcpQV/6lI1uLOldPGX2q4TEJapwlQk/tQf
+        Xh6Sn5HM6TF41KWC26wl4eWqxmIUJWdyZF3KLQ2UncaXJlxYVTIrYlcAmDiQAAAAAAAAAAAAAAAAAAAA
+        AF9FXlHmWF9OdmnwAnZ1X601FbIq3iTckwvaYjC0virU4vkpJv0TPE6+u743ZuXRbhnWx6m17NGlKp96
+        XsR/OXkdpXdohXltwxzP2doAB6b5tqPSpk7xOXV1FXqUrYinxvT1yS5xcl4nzxSlse5n1pKKaaetNWa7
+        j5g0tyV4PGYjD29iM3Oi+NCftQ8vd+6U5I92zpr+yCZKFS2p7DDB3RcZ5h6ETrunAw0Km5+BmK5jTRE7
+        gFwA6r1hcoDhsuLgHRW5VSLQcNrwWFykNJbVABx0AAAAAAAAAAA690PZZ1MNUrta69T2f+KneK8312cm
+        wmFnWqU6NPXUqTVOPOT28krvwPo/LMFChSpUaatCnCMI8oq1zR09e+3nf5DLqsUj3SQAbHkBzPps0cdW
+        hDGU43qYfVVS2vDyet/devk2dMLK1KMoyjJJxknGUXrTi1ZpnJjcJUtxnb5Npy8jOetpxo1LL8XOjZ9h
+        O9TDT402/db4xerye88WnLcZbQ9XHbcMhKo1L8yKEyuY2urbScDHSqX5mQgvidgADoAAAAAAACqZcmWA
+        47teC246w07tcCnWKdY5o2uBbcod0bXdYo5FDPlWW1cXXpYaj7837UtqhTXvTfcl+i3nYruUL34xuW/d
+        DeR9edTGzXswvSoX3zfvzXJWV+98DrZDyjLaeGo0qFJWp04KMeLttb727t8yYehSvGNPAzZJyXmwACSo
+        AAGu6daLU8ww0qUrRqx9uhVtfqVUtX3XsZ834vDVKNSpRrRcK1OXVnF7mt64rfc+sjQ+k7QRY6Hb4dKO
+        NpxtF7FVgtfZyfHgyu9d92jDl49pcKhO/MvI8lKMpRnGUakW4zg1ZxktqaMsJmeYejW216ZIpVr6ntI4
+        IzG1lbTCcCLTrNd6JEKiewhMaXRaJXAA4kAAAAAAAAAAAC11FxRjliFuQ1KM2iGYtlUS2sjSqt/4I9as
+        o8+BKKK7ZYhJq122lFNyk1GMVrcpN2SR3jo00Q+Q0OvWSeLrJOq/gjupLlv4s1zok0FcFDHYyP00lfDU
+        pL+HB7KjW6TWzgu9nVTVjx67vM6nPN/ywAAuYwAAAAAAAGhdI3R5DHJ18P1aeNituyNVL6s+/hI4TiqF
+        SlUlSrwlTqxdpQkrNM+szW9MtC8LmELVV1a0V9HXjbrx7n8Ue5ldqb8NGLNx7S+cI1OJkTPR0q0UxmXz
+        tXg5UW7QxEU3CXN/Vfc/U8aE+DKJq3VyRKSDHGpxL1JEdLImJZI1WjIsRxRgBHUJxaYSlWiV7WPFEQDj
+        CXqSl9pHih2seJEBziepKS68e8teI4IwFrkjvGHJySzOu+4slNva2Y3URa6jJcUJv92Utc0R6lW21+BM
+        yHJMXjqnZYWnKXxT2QguM57Fy2koqqtliEWVZtqME5SbsopNtt7Ektr7jr3Rz0Xqm4YrMYqVXVKlhnZx
+        g9qlU3Sl9nYu97Ni0E6OsNgEqk7VsW1rqtaod1OO7ntN2L600xZc8z4AAWMwAAAAAAAAAAAAAxYnDwqR
+        lCpGM4SVpQklJNcGmct0s6Hac3Kpl01Snt+TzbdNv7EtsOWtcjq4OTESlW818PlLOsoxeDn1MXRnTd7R
+        k17Mv5Zr2ZeDIcaqe8+tMTh4VIuFSEJwepwlFSi13p6jRM96I8tr3lRVTDT/APm+tDxpy1LwaK5xtNeo
+        +XClJle0ZvGadDmY07vD1KFePDrOjP8ADK8f6jV8dopmlH+Lg8TZb1TdVedO6K5ovrmiUDte4r2vcRas
+        5w1Tg4vhKMov1LFi13eZzil6qZ2vcUdRkN4vl5ladWUtUFd8IpyfoOJ6qU5MtcktpNwOjGZVv4WExUu/
+        s5U1+KVkbRlfQ9mdWzrOhQj9qbqy/DDV/USiqFsumiyrrdrM2XYLEYmfZ4elUqT+GEW7d8nsiu9nbsj6
+        HMBStLETq4iXBvsqf4Y634tm/wCX5fRoQUKFOnTgtkYRjBehOKKLZ3IdFOhqT6tTMallt+TU3dvunU3c
+        o+Z1zLMtoYenGlh6cKdNbIxSS5vi+9ksFkREKLXmwADqAAAAAAAAAAAAAAAAAAAAAAAADy8993wOZ517
+        zKgoyeW/pvCPlHvHSdG9i5FQMZ1Hh7oAL2AAAAAAAAAAAAAAAAB//9k=
+</value>
+  </data>
   <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAASgAAACrCAMAAADiivHpAAAABGdBTUEAALGPC/xhBQAAAWVQTFRF////
