--- a/TecHouseView/frmConfigPuertasYVentanas.resx
+++ b/TecHouseView/frmConfigPuertasYVentanas.resx
@@ -536,4 +536,7 @@
         PZ+I3HMojccWSLl4PyjhBqOJFz/+I//Z
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
